Fixed the diamond section on the right not showing, and added some space between the diamonds and the edges of the lava area

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -163,11 +163,22 @@ section.lava::after
   width: 1rem;
   height: 1rem;
   top: 0;
+  margin: 6px;
   background-color: var( --color-diamond );
   border: 0px solid var( --color-stone );
   border-top-width: 0.2rem;
   border-bottom-width: 0.4rem;
   box-shadow: inset 0 0 5px var( --color-lava );
+}
+
+section.lava::before
+{
+  left: 0;
+}
+
+section.lava::after
+{
+  right: 0;
 }
 
 footer
